--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,11 @@
 RewriteEngine On
 DirectoryIndex index.html
 
-# Redirections de domaine pour corriger les problèmes d'indexation GSC
+# ÉTAPE 1: Forcer HTTPS en premier
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# ÉTAPE 2: Redirections de domaine pour corriger les problèmes d'indexation GSC
 # Si le domaine accent est configuré dans le futur, rediriger vers le domaine sans accent
 RewriteCond %{HTTP_HOST} ^zozosécurités\.fr$ [NC]
 RewriteRule ^(.*)$ https://zozosecurite.fr/$1 [R=301,L]
@@ -18,6 +22,10 @@ RewriteRule ^(.*)$ https://zozosecurite.fr/$1 [R=301,L]
 RewriteCond %{HTTP_HOST} ^www\. [NC]
 RewriteCond %{HTTP_HOST} !^www\.zozosecurite\.fr$ [NC]
 RewriteRule ^(.*)$ https://zozosecurite.fr/$1 [R=301,L]
+
+# ÉTAPE 3: Canonicalisation index.html vers /
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.html[\s?] [NC]
+RewriteRule ^index\.html$ / [R=301,L]
 
 # Redirection des URLs de test/placeholder vers des pages pertinentes
 RedirectMatch 301 ^/hello-world/?$ /index.html
@@ -43,10 +51,7 @@ RedirectMatch 301 ^/404/?$ /index.html
 RedirectMatch 301 ^/500/?$ /index.html
 
 # Optimisations générales
-# Forcer HTTPS (si supporté par votre hébergeur)
-# RewriteEngine On
-# RewriteCond %{HTTPS} off
-# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# HTTPS redirect maintenant géré au début du fichier
 
 # Compression
 <IfModule mod_deflate.c>
